# sorl-thumbnail

./: .coveragerc  .dockerignore  .editorconfig  .gitignore  .hgignore  .pre-commit-config.yaml  .travis.sh  .travis.yml  AUTHORS  CHANGES.rst  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  LICENSE  MANIFEST.in  README  README.rst  Vagrantfile  codecov.yml  docker-compose.yml  pyproject.toml  requirements.pip  setup.cfg  setup.py  tox.ini  vagrant.sh
.github/workflows/: release.yml  test.yml
branches/sorl-merge-in-progress/: .base.py.swp  .main.py.swp  base.py  main.py  utils.py
branches/sorl-merge-in-progress/templatetags/: .thumbnail.py.swp  thumbnail.py
docs/: Makefile  conf.py  contributing.rst  examples.rst  index.rst  installation.rst  logging.rst  make.bat  management.rst  news.rst  operation.rst  requirements.rst  template.rst
docs/ref/: index.rst  settings.rst
docs/reference/: image.rst  index.rst  settings.rst
sandbox/: bootstrap.sh  tox.sh
sorl/: __init__.py
sorl/tests/: runtests.py  settings.py
sorl/thumbnail/: LICENSE.TXT  README.TXT  __init__.py  admin.py  base.py  compat.py  default.py  defaults.py  drf.py  fields.py  helpers.py  images.py  log.py  main.py  methods.py  models.py  parsers.py  processors.py  readme.txt  shortcuts.py  urls.py  utils.py  views.py  widgets.py
tests/: .coverage  .coveragerc  initial_data.json  manage.py  runalltests.sh  runtests.py  settings.py  urls.py
tests/settings/: dbm.py  default.py  dynamodb.py  graphicsmagick.py  imagemagick.py  pgmagick.py  pil.py  redis.py  vipsthumbnail.py  wand.py
tests/templates/: thumbnail.html  thumbnail1.html  thumbnail2.html  thumbnail3.html  thumbnail4.html  thumbnail5.html  thumbnail8.html  thumbnaild1.html  thumbnaild2.html  thumbnaild3.html
tests/test_app/: models.py  tests.py
tests/thumbnail_tests/: compat.py  kvstore.py  models.py  storage.py  test_admin.py  test_alternative_resolutions.py  test_backends.py  test_commands.py  test_engines.py  test_filters.py  test_formfields.py  test_kvstore.py  test_parsers.py  test_storage.py  test_templatetags.py  tests.py  urls.py  utils.py  views.py
thumbnail/: .main.py.swp  exceptions.py  main.py  methods.py
thumbnail/templatetags/: .thumbnail.py.swp  thumbnail.py
(+95 files in other folders)
